--- a/css/styles.css
+++ b/css/styles.css
@@ -10,3 +10,20 @@
   border-style: dashed;
   box-sizing: content-box;
 }
+.button-class {
+  background-color: #ffa500; /* Orange */
+  border: none;
+  color: white;
+  padding: 16px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  -webkit-transition-duration: 0.4s; /* Safari */
+  transition-duration: 0.4s;
+  cursor: pointer;
+  background-color: white;
+  color: black;
+  border: 2px solid #ffa500;
+}
